docs/envoy/v1.22.8/_sources/api-v3/config/endpoint/v3/endpoint.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/endpoint/v3/endpoint.proto:

Endpoint configuration
======================


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`api/v2/endpoint.proto <v1.17:envoy_api_file_envoy/api/v2/endpoint.proto>`


Endpoint discovery :ref:`architecture overview <arch_overview_service_discovery_types_eds>`

.. _envoy_v3_api_msg_config.endpoint.v3.ClusterLoadAssignment:

config.endpoint.v3.ClusterLoadAssignment
----------------------------------------

:repo:`[config.endpoint.v3.ClusterLoadAssignment proto] <api/envoy/config/endpoint/v3/endpoint.proto#L33>`

Each route from RDS will map to a single cluster or traffic split across
clusters using weights expressed in the RDS WeightedCluster.

With EDS, each cluster is treated independently from a LB perspective, with
LB taking place between the Localities within a cluster and at a finer
granularity between the hosts within a locality. The percentage of traffic
for each endpoint is determined by both its load_balancing_weight, and the
load_balancing_weight of its locality. First, a locality will be selected,
then an endpoint within that locality will be chose based on its weight.

.. code-block:: json

  {
    "cluster_name": "...",
    "endpoints": [],
    "policy": "{...}"
  }

.. _envoy_v3_api_field_config.endpoint.v3.ClusterLoadAssignment.cluster_name:

cluster_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Name of the cluster. This will be the :ref:`service_name
  <envoy_v3_api_field_config.cluster.v3.Cluster.EdsClusterConfig.service_name>` value if specified
  in the cluster :ref:`EdsClusterConfig
  <envoy_v3_api_msg_config.cluster.v3.Cluster.EdsClusterConfig>`.
  
  
.. _envoy_v3_api_field_config.endpoint.v3.ClusterLoadAssignment.endpoints:

endpoints
  (**repeated** :ref:`config.endpoint.v3.LocalityLbEndpoints <envoy_v3_api_msg_config.endpoint.v3.LocalityLbEndpoints>`) List of endpoints to load balance to.
  
  

.. _envoy_v3_api_field_config.endpoint.v3.ClusterLoadAssignment.policy:

policy
  (:ref:`config.endpoint.v3.ClusterLoadAssignment.Policy <envoy_v3_api_msg_config.endpoint.v3.ClusterLoadAssignment.Policy>`) Load balancing policy settings.
  
  
.. _envoy_v3_api_msg_config.endpoint.v3.ClusterLoadAssignment.Policy:

config.endpoint.v3.ClusterLoadAssignment.Policy
-----------------------------------------------

:repo:`[config.endpoint.v3.ClusterLoadAssignment.Policy proto] <api/envoy/config/endpoint/v3/endpoint.proto#L38>`

Load balancing policy settings.

.. code-block:: json

  {
    "overprovisioning_factor": "{...}",
    "endpoint_stale_after": "{...}"
  }


.. _envoy_v3_api_field_config.endpoint.v3.ClusterLoadAssignment.Policy.overprovisioning_factor:

overprovisioning_factor
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Priority levels and localities are considered overprovisioned with this
  factor (in percentage). This means that we don't consider a priority
  level or locality unhealthy until the fraction of healthy hosts
  multiplied by the overprovisioning factor drops below 100.
  With the default value 140(1.4), Envoy doesn't consider a priority level
  or a locality unhealthy until their percentage of healthy hosts drops
  below 72%. For example:
  
  .. code-block:: json
  
   { "overprovisioning_factor": 100 }
  
  Read more at :ref:`priority levels <arch_overview_load_balancing_priority_levels>` and
  :ref:`localities <arch_overview_load_balancing_locality_weighted_lb>`.
  
  
.. _envoy_v3_api_field_config.endpoint.v3.ClusterLoadAssignment.Policy.endpoint_stale_after:

endpoint_stale_after
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The max time until which the endpoints from this assignment can be used.
  If no new assignments are received before this time expires the endpoints
  are considered stale and should be marked unhealthy.
  Defaults to 0 which means endpoints never go stale.
  
  



